[tool.poetry]
name = "FlukeBot"
version = "0.1.0"
description = ""
authors = ["Fleyji <19764461+Fleyji@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
redis = "*"
pytest = "*"
pre-commit = "^3.2.2"
discord-py = "^2.2.2"

[tool.poetry.group.dev.dependencies]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
